# Cryptographic_File_System

./: .gitignore  .graphifyignore  Cargo.toml  README.md  build.rs  out_interop.txt  plot_benchmarks.py  pom.xml  requirements.md  tasks.md  test_argon2.img  test_cli.ps1
cfs-ui/: index.html  package-lock.json  package.json  test_stepper_math.mjs
cfs-ui/src/: App.tsx  commands.ts  global.css  main.tsx  router.tsx  store.ts  types.ts
cfs-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cfs-ui/src-tauri/capabilities/: default.json
cfs-ui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
cfs-ui/src/components/: AdvancedSettingsModal.tsx  BenchmarkModal.tsx  Breadcrumb.tsx  CreateVolumeForm.tsx  ErrorToast.tsx  FileList.tsx  FileRow.tsx  FileViewer.tsx  HexViewer.tsx  KeySlotManagerModal.tsx  LockConfirmDialog.tsx  MetadataPanel.tsx  NumberStepper.tsx  Sidebar.tsx  StatusBar.tsx  TextViewer.tsx  Titlebar.tsx
cfs-ui/src/hooks/: useKeyboard.ts
cfs-ui/src/screens/: BrowserScreen.tsx  UnlockScreen.tsx
examples/: bench_all.rs  bench_test.rs
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: block_device.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/crypto/: aead.rs  header.rs  key.rs  mod.rs  secure_mem.rs  slot.rs  xts.rs
src/fuse/: helpers.rs  mod.rs  mount.rs
src/main/electron/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  vite.config.ts  vitest.config.ts
src/main/electron/dist-renderer/: index.html
src/main/electron/dist-renderer/assets/: index-BIfnDbCR.js  index-Cj3dDuL3.css
src/main/electron/electron/: ipc-handlers.ts  main.ts  preload.ts
src/main/electron/src/: App.tsx  index.css
src/main/electron/src/__tests__/: App.integration.test.tsx  sharingWorkflow.integration.test.tsx
src/main/electron/src/components/: AuditTrail.tsx  AuthGuard.tsx  ContainerCreationWizard.tsx  RegistrationForm.tsx  ShareDialog.tsx  SharedContainersList.tsx  SimpleContainerWizard.tsx  ThemeToggle.tsx
src/main/electron/src/components/__tests__/: AuditTrail.test.tsx  AuthGuard.integration.test.tsx  AuthGuard.test.tsx  RegistrationForm.test.tsx  ShareDialog.test.tsx  SharedContainersList.test.tsx
src/main/electron/src/components/layout/: Header.tsx  Sidebar.tsx
src/main/electron/src/components/ui/: alert.tsx  badge.tsx  card.tsx
src/main/electron/src/contexts/: ThemeContext.tsx
src/main/electron/src/pages/: Containers.tsx  Dashboard.tsx  LoginPage.tsx  Settings.tsx  Sharing.tsx  SystemInfo.tsx
src/main/electron/src/pages/__tests__/: LoginPage.test.tsx  Sharing.test.tsx  SystemInfo.test.tsx
src/main/electron/src/services/: api.ts  auditService.ts  authService.ts  credentialStorage.ts  sessionManager.ts
src/main/electron/src/services/__tests__/: auditService.test.ts  authErrorHandling.test.ts  sessionPersistence.integration.test.ts  sharingAPI.test.ts  sharingIntegration.test.ts  userAPI.test.ts
src/main/electron/src/test/: setup.ts  systemInfo.integration.test.ts
src/volume/: alloc.rs  bitmap.rs  cache.rs  delayed_alloc.rs  dir.rs  extent.rs  file_io.rs  group.rs  htree.rs  inode.rs  journal.rs  lock.rs  mod.rs  path.rs  superblock.rs  xattr.rs
tests/: integration_mount.rs  manual_verify.rs
