[package]
name = "cfs-io"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
aes-gcm = { version = "0.10", features = ["aes"] }
anyhow = "1"
cbc = "0.1"
cipher = "0.4"
argon2 = { version = "0.6.0-rc.7", features = ["parallel"] }
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
ctrlc = "3"
hmac = "0.12"
lru = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rayon = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
siphasher = "1"
subtle = "2"
uuid = { version = "1", features = ["v4"] }
winfsp = { version = "0.12", features = ["system"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
xts-mode = "0.5"
zeroize = "1"

[build-dependencies]
winfsp = "0.12"

[dev-dependencies]
tempfile = "3"

# ---------------------------------------------------------------------------
# Performance & Optimization Profiles
# ---------------------------------------------------------------------------

# Maximum release performance for production builds and `tauri dev --release`
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Ensure cryptographic primitives run at level 3 release speed even during regular dev builds!
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.pbkdf2]
opt-level = 3
[profile.dev.package.argon2]
opt-level = 3
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.aes-gcm]
opt-level = 3
[profile.dev.package.xts-mode]
opt-level = 3
[profile.dev.package.hmac]
opt-level = 3
